--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -3,7 +3,17 @@
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
-
+<ItemGroup>
+  <PackageReference Include="FluentValidation" Version="11.10.0" />
+  <PackageReference Include="Mapster" Version="7.4.1-pre01" />
+  <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="8.0.10" />
+  <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+  <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
+  <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="6.35.0" />
+  <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.35.0" />
+  <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.35.0" />
+</ItemGroup>
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
