--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -9,6 +9,7 @@
   <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="8.0.10" />
   <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
   <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+  <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.10" />
   <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
   <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="6.35.0" />
   <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.35.0" />
